--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react-hot-toast": "^2.4.1",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.20.0",
+    "react-snowfall": "^2.4.0",
     "recharts": "^2.10.3",
     "socket.io-client": "^4.8.1"
   },
@@ -36,5 +37,3 @@
     "vite": "^5.0.8"
   }
 }
-
-
