--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-three/drei": "^9.96.1",
     "@react-three/fiber": "^8.15.16",
+    "@react-three/postprocessing": "^3.0.4",
     "axios": "^1.6.2",
     "date-fns": "^2.30.0",
     "framer-motion": "^12.28.1",
