--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "node server.js",
+    "worker": "node worker.js",
     "dev": "nodemon server.js",
     "test": "jest"
   },
@@ -35,6 +36,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^7.0.10",
     "pdfkit": "^0.17.2",
+    "pm2": "^6.0.14",
     "redis": "^5.9.0",
     "sib-api-v3-sdk": "^8.5.0",
     "socket.io": "^4.8.1",
