--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0"
+    "install": "npm install --legacy-peer-deps"
   },
   "dependencies": {
     "@react-three/drei": "^9.96.1",
