--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,16 +10,16 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
-    "@react-three/drei": "^9.100.0",
-    "@react-three/fiber": "^9.5.0",
+    "@react-three/drei": "^9.122.0",
+    "@react-three/fiber": "9.4.3",
     "@react-three/postprocessing": "^3.0.4",
     "axios": "^1.6.2",
     "date-fns": "^2.30.0",
     "framer-motion": "^12.28.1",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.294.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.20.0",
