Model Limitation added

--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
   "author": "Your Name",
   "license": "MIT",
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@supabase/supabase-js": "^2.78.0",
     "axios": "^1.13.2",
     "bcryptjs": "^2.4.3",
