--- a/backend/package.json
+++ b/backend/package.json
@@ -24,10 +24,14 @@
     "axios": "^1.13.2",
     "bcryptjs": "^2.4.3",
     "bullmq": "^5.63.2",
+    "connect-mongo": "^6.0.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.21.2",
     "express-rate-limit": "^6.11.2",
+    "express-session": "^1.19.0",
+    "google-auth-library": "^10.5.0",
     "helmet": "^7.2.0",
     "ioredis": "^5.8.2",
     "joi": "^17.13.3",
@@ -36,6 +40,8 @@
     "mongoose": "^7.8.7",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^7.0.10",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "pdfkit": "^0.17.2",
     "pm2": "^6.0.14",
     "redis": "^5.9.0",
